# gtsystem

./: .gitignore  README.md  pypipush.sh  pyproject.toml  requirements.txt
app/: chat.py
data/: config.yaml  leaderboard-2024-0413.xlsx  openai-examples-21.xlsx  optimize-genai-2024-0418.xlsx  quality-benchmark-2024-0421.xlsx
gtsystem/: anthropic.py  bedrock.py  benchmark.py  chat.py  groq.py  instrument.py  leaderboard.py  ollama.py  openai.py  openai_master.py  render.py  tasks.py
notebooks/: 00-leaderboard.ipynb  01-evaluate.ipynb  02-render.ipynb  03-tasks.ipynb  04-instrument.ipynb  05-benchmark.ipynb  06-ollama.ipynb  07-low-code-sample.ipynb  08-prototype-to-production.ipynb  09-chat-bedrock.ipynb  10-chat-anthropic.ipynb  11-chat-openai.ipynb  12-search-and-cache.ipynb  12-trends.ipynb  13-stream.ipynb  14-chat-ollama.ipynb
notebooks/claude_chats/: 240417070803-Create-a-markdown-table-of-5-tallest-buildings.json  240417070934-Which-place-is-this.json  240417073642-Who-is-the-mother-of-Bill-Gates.json  240417073940-Which-place-is-this.json  240420161626-Who-is-the-mother-of-Bill-Gates.json  240420161642-Create-a-markdown-table-of-5-tallest-buildings.json  240420161834-Which-place-is-this.json  240420161950-Who-is-the-mother-of-Bill-Gates.json  240420162024-Which-place-is-this.json  240424145445-Who-is-the-mother-of-Bill-Gates.json  240424145513-Create-a-markdown-table-of-5-tallest-buildings.json  240424145626-Which-place-is-this.json  240424145828-Who-is-the-mother-of-Bill-Gates.json  240424145903-Create-a-markdown-table-of-5-tallest-buildings.json  (+1 more)
(+13 files in other folders)
