[project]
name = "gtsystem"
version = "0.0.3"
authors = [
  { name="GenAI Techne", email="team@genaitechne.com" },
]
description = "GenAI Techne System (gtsystem) is a low code Python package for crafting GenAI applications quickly"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Communications :: Chat",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing"
]

[project.urls]
Homepage = "https://github.com/GenaiTechne/gtsystem"
Issues = "https://github.com/GenaiTechne/gtsystem/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "gtsystem/*.py",
]
exclude = [
  "/notebooks",
  "/data"
]
